Small improvements
* Cover more exceptions with %catches feature.

* Use more recent versions of Scala and dependencies.

* Some modification to get rid of deprecation warnings.